UI alignment fix in session info card

--- a/web/src/components/session-info-card/session-info-card.css
+++ b/web/src/components/session-info-card/session-info-card.css
@@ -11,7 +11,7 @@
 .session-info-card__item {
   display: flex;
   flex-direction: column;
-  flex: 0.9;
+  flex: 0 0 88%;
 }
 
 .session-info-card__details_wrapper {
@@ -49,9 +49,14 @@
   display: flex;
   align-items: center;
   color: #5a4949;
+}
+
+.session-info-card__device_name span {
+  font-size: 11px;
+  text-overflow: ellipsis !important;
+  white-space: nowrap !important;
+  max-width: 180px;
   overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .session-info-card__platform .device-icon,
